--- a/Sapodillas/style.css
+++ b/Sapodillas/style.css
@@ -766,6 +766,60 @@
   }
   
   
+
+  /* PROMO TAB */
+
+  .hero .promo-wrapper {
+    width: 60%; /* Adjust this percentage as needed */
+    max-width: 45rem; /* Prevents becoming too wide on large screens */
+    margin: 0 auto; /* Centers the slider */
+  }
+  
+  .hero .promo {
+    aspect-ratio: 16 / 9;
+    width: 100%; /* Ensures slider fills its container */
+  }
+  
+  .hero .promo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    animation: rotate 20s linear infinite; /* Adjust duration and timing as needed */
+  }
+  
+  @keyframes rotate {
+    0%, 100% { transform: rotate(0deg); }
+    50% { transform: rotate(10deg); }
+  }
+  
+  .hero .promo-wrapper {
+    width: 100%; /* Ensure full width */
+    overflow: hidden; /* Prevent any overflow */
+  }
+  
+  .hero .promo {
+    width: 100%;
+    display: flex;
+    aspect-ratio: 16 / 9; /* Maintains consistent aspect ratio */
+  }
+  
+  .hero .promo-nav {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+  }
+  
+
+  
+  .hero .promo-nav a:hover {
+    opacity: 1;
+  }
+
+
   
   
   
@@ -890,8 +944,6 @@
   .hero .slider-item.active .hero-text { animation-delay: 1.5s; }
   
   .hero .slider-item.active .btn { animation-delay: 2s; }
-  
-  
   
   
   
@@ -1122,16 +1174,14 @@
   }
   
   
-  
-  
-  
+
   /*-----------------------------------*
     #RESERVATION
   *-----------------------------------*/
   
   .reservation-form { margin-block-start: -270px;
     border-radius: 10%;
-    background-image: url('https://github.com/codewithsadee/grilli/blob/master/assets/images/footer-form-bg.png?raw=true'); }
+    background-image: url(''); }
   
   .form-text { margin-block-end: 40px; }
   
@@ -1216,8 +1266,6 @@
   
   
   
-  
-  
   /*-----------------------------------*
     #FEATURES
   *-----------------------------------*/
@@ -1249,11 +1297,7 @@
   }
   
   
-  
-  
-  
-  
-  
+
   /*-----------------------------------*
     #FOOTER
   *-----------------------------------*/
@@ -1334,9 +1378,6 @@
   }
   
   .footer-link:is(:hover, :focus-visible) { color: var(--sun-tan); }
-  
-  
-  
   
   
   
@@ -2076,6 +2117,11 @@
   
   }
   
+
+
+
+
+
   
   
   #about {
@@ -2616,12 +2662,22 @@
   }
   
   #redirect {
-    height: 100vh;              
+    height: 100vh; 
+    width: 100vw; 
+    min-height: 100vh; 
     margin: 0;
+    padding: 0;
     display: flex;
     background-image: url('https://sapodillas.com/wp-content/uploads/2024/09/pattern.png');
-    overflow: hidden
-  }
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    position: fixed; 
+    top: 0;
+    left: 0;
+    z-index: 1000; 
+}
   
   .button-container {
     display: flex;
@@ -2679,10 +2735,3 @@
       align-items: center;
     }
   }
-  
-  
-  
-  
-  
-  
-  
